finalizando el proyecto, faltan detalles, se agregaron todas las funcionalidades excepto imagen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="g_imagen_de_pel_cula">imagen de película</string>
     <string name="lista_de_pel_culas">Lista de películas:</string>
     <string name="agregar_otra_pel_cula">Agregar otra película</string>
+    <string name="cancelar">cancelar</string>
 </resources>
