Agregando vista recycler view cuando no hay peliculas, que se muestre texto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="agregar_otra_pel_cula">Agregar otra película</string>
     <string name="cancelar">cancelar</string>
     <string name="url_de_la_imagen">URL de la imagen</string>
+    <string name="no_tienes_pel_culas">No tienes películas</string>
 </resources>
